--- a/css/main.css
+++ b/css/main.css
@@ -42,19 +42,33 @@ body{
 }
 .content{
   margin: 0 auto;
+  width: 93%;
 }
 
+.fa-facebook:hover{
+    color: #3A5795;
+}
+.fa-twitter:hover{
+    color: #54ABEC;
+}
+.fa-github:hover{
+    color:#4078C0;
+}
+.fa-google-plus:hover{
+    color: #DB4437;
+}
 /*----- Header -----*/
 header{
   background-color: #222222;
 }
 header .content{
-  padding: 10px 3% 10px 3%;
+  padding: 10px 0% 10px 0%;
 }
 header h1{
   font-size: 1.7em;
   width: auto;
   float: left;
+  cursor: pointer;
 }
 header h1:hover{
 color : #4183D7;
@@ -65,7 +79,7 @@ header .btn-mobile{
   float: right;
   text-align: center;
   font-size: 1.5em;
-  background-color: #4183D7;
+  background-color: #446CB3;
   cursor: pointer;
   border-radius: 5px;
   color:#fff;
@@ -100,7 +114,6 @@ header .btn-mobile{
 /*----- Apresentacao -----*/
 .apresentacao{
   padding-top: 20px;
-  background-color: #446CB3;
   background-image: url(../img/computer-background.jpeg);
   background-position:center;
   background-attachment: fixed;
@@ -110,7 +123,6 @@ header .btn-mobile{
 .apresentacao .content{
   text-align: center;
   color: #fff;
-  width: 93%;
 
 }
 .apresentacao h2{
@@ -131,23 +143,145 @@ header .btn-mobile{
   padding-top: 30px;
   padding-bottom: 40px;
   text-align: justify;
-  width: 93%;
 
 }
 .sobre{
-  background-color: #5C97BF;
+  background-color: #1E1E28;
 }
 .sobre h2{
   padding-bottom: 10px;
   font-size: 2em;
+  text-align: center;
+}
+.sobre i{
+  width: 100%;
+  text-align: center;
+  font-size: 3.3em;
+  padding-bottom: 10px;
 }
 .sobre p{
   font-size: 1.1em;
+  text-align: justify;
 }
 /*----- Fim Sobre -----*/
-
-@media screen and (min-width:700px){
-  .apresentacao{
-    /*background-image: url(../img/computer-background.jpeg);*/
-  }
+/*----- Portfolio -----*/
+.portfolio{
+  padding-top: 20px;
+  background-color: #E8E8E8;
+  color: #446CB3;
 }
+.portfolio h2{
+  font-size: 2em;
+  text-align: center;
+}
+.trabalho{
+  margin-top: 20px;
+  padding-bottom:  20px;
+  border-bottom: 1px solid #446CB3;
+  width: 100%;
+}
+.trabalho h3{
+  padding-top: 10px;
+}
+.portfolio .trabalho{
+  text-align: center;
+}
+.portfolio .trabalho figure img{
+  max-width: 100%;
+  width: 100%;
+  cursor: pointer;
+}
+/*----- Fim Portfolio -----*/
+/*----- Contato -----*/
+.contato{
+  padding-top: 30px;
+  background-color: #1E1E28;
+  color:#fff;
+  width: 100%;
+  padding-bottom: 20px;
+}
+.contato h2{
+  font-size: 2em;
+  text-align: center;
+  margin-bottom: 20px;
+
+}
+.contato form{
+  width: 100%;
+}
+
+.contato form input[type="text"]{
+  margin-bottom: 20px;
+  width: 100%;
+  background-color: #1E1E28;
+  color: #fff;
+  border-radius: 5px;
+  border-color: #fff;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 3%;
+  font-size: 1.2em;
+}
+.contato form input[type="text"]:focus{
+  border: 2px solid #6BB9F0;
+}
+.contato form textarea{
+  margin-bottom: 20px;
+  width: 100%;
+  background-color: #1E1E28;
+  color: #fff;
+  border-radius: 5px;
+  border-color: #fff;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 3%;
+  font-size: 1.2em;
+  resize: vertical;
+}
+.contato form textarea:focus{
+    border: 2px solid #6BB9F0;
+}
+
+.contato form input[type="submit"]{
+    background-color: #1E1E28;
+    color: #fff;
+    border-radius:10px;
+    padding: 5px;
+    margin-bottom: 20px;
+    font-size: 1em;
+
+}
+.contato form input[type="submit"]:hover{
+  border-color: #6BB9F0;
+  color:#6BB9F0;
+  cursor: pointer;
+  /*background-color: #fff;*/
+}
+
+/*----- Fim Contato -----*/
+/*----- Footer -----*/
+.footer{
+  padding-top: 15px;
+  padding-bottom: 10px;
+  background-color: #222;
+  width: 100%;
+}
+.footer p{
+  width: 100%;
+  text-align: center;
+  font-style: italic;
+  margin-bottom: 10px;
+}
+.footer ul{
+  width: 100%;
+  text-align: center;
+  font-size: 1.6em;
+}
+.footer ul li{
+  display: inline;
+  margin-right: 10px;
+}
+.footer ul li:last-of-type{
+  margin-right: 0;
+}
+/*----- Fim Footer -----*/
